--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
+    "angularfire2": "^2.0.0-beta.0",
     "chart.js": "^2.1.3",
     "es6-shim": "^0.35.0",
+    "firebase": "^2.4.2",
     "ng2-charts": "^1.1.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
